Cidade - Refatoracao do codigo